--- a/public/index.html
+++ b/public/index.html
@@ -20,5 +20,6 @@
     }
   </code>
   <p>Otherwise, you will recieve a JSON object containing an error message</p>
+  <p>Values are saved in the cache for 1 minute</p>
 </body>
 </html>
